==================== 2.19.5 ====================

2007-07-07  Vincent Untz  <vuntz@gnome.org>

	* panel-context-menu.c: (panel_context_menu_show_about_dialog): use
	program-name instead of name property for GtkAboutDialog.
	Fix bug #438903.

2007-07-03  Bastien Nocera  <hadess@hadess.net>

	* panel-action-button.c: (panel_action_force_quit):
	* panel-action-protocol.c: (panel_action_protocol_kill_dialog),
	(panel_action_protocol_filter), (panel_action_protocol_init):
	* panel-force-quit.c: (panel_force_quit):
	* panel-force-quit.h: Add the _GNOME_PANEL_ACTION_KILL_DIALOG message
	to allow a keybinding for the force quit dialogue to be added
	(Closes: #442625)

2007-07-01  Vincent Untz  <vuntz@gnome.org>

	* button-widget.c: (button_widget_expose): add a detail for the arrow
	in the button widget

2007-07-01  Vincent Untz  <vuntz@gnome.org>

	* menu.[ch]: (create_item_context_menu): don't use setup_menuitem(),
	but gtk_menu_item_new_with_mnemonic() since we don't need what
	setup_menuitem() does
	(setup_menuitem): always create invisible mnemonic
	(create_submenu_entry): updated
	(create_menuitem): updated
	(setup_menu_item_with_icon): always create invisible mnemonic
	* panel-menu-items.c:
	* panel-recent.c: updated for
	setup_menuitem()/setup_menu_item_with_icon() change

2007-07-01  Vincent Untz  <vuntz@gnome.org>

	* panel-toplevel.c: add two comments to help with understanding the
	code.

2007-07-01  Vincent Untz  <vuntz@gnome.org>

	Migrate to GtkTooltip.

	* panel-util.[ch]: (panel_util_query_tooltip_cb): new, check if
	tooltips are enabled but displaying one
	(panel_util_set_tooltip_text): wrapper for tooltip for the panel,
	since we need to check if the tooltips are enabled in the panel config.
	* panel-config-global.c: simplify, since we don't need to do the
	GtkTooltips stuff
	* main.c: (main):
	* panel-globals.h: remove useless global GtkTooltips variable
	* drawer.c:
	* launcher.c:
	* menu.c:
	* panel-action-button.c:
	* panel-menu-button.c: